# game1

./: CMakeLists.txt  background.cpp  background.h  main.cpp  plataforma.cpp  plataforma.h  player.cpp  player.h  stb_image.cpp
